400-implement-observable-pattern-for-bciphaseinstance (#426)
* - Add BCIPhaseInstanceEvent for structured event handling.
- Added new repository method findByIdAndCurrentBlockId.
- Enhanced service to publish BCIPhaseInstanceEvent.
- Updated test cases to validate the new event publishing functionality.

* Remove unused imports and cleanup in BehaviorChangeInterventionPhaseInstanceService.

* Refactor test class by removing unnecessary whitespace in `BehaviorChangeInterventionPhaseInstanceServiceTest`.